# PDF-RAG-PROJECT-

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  prod_server.py  pyproject.toml  requirements.txt  run.bat  setup.py
.commandcode/taste/: taste.md
pdf_rag_pipeline/: __init__.py  classifier.py  cli.py  exporters.py  layout.py  models.py  ocr.py  parser.py  pipeline.py  tables.py  tagging.py
sdks/node/: index.d.ts  index.js  package.json
sdks/python/: __init__.py  pdf_rag_sdk.py
web_ui/: app.py  requirements.txt  run.bat
web_ui/templates/: index.html
