[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag-pipeline"
version = "1.0.0"
description = "Structured PDF extraction engine for RAG — bounding boxes, tables, OCR, accessibility"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "PDF RAG Pipeline Contributors" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
web = ["flask>=3.0", "waitress>=2.1"]
prod = ["flask>=3.0", "waitress>=2.1", "gunicorn>=22.0"]

[project.scripts]
pdf-rag = "pdf_rag_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pdf_rag_pipeline", "pdf_rag_pipeline.*"]
